Bug 1041519 - IonMonkey (ARM): Instantiate setVFPRegister for use by the jsapi-tests. r=mjrosenb, a=NPOTB